# summarizer-bot

./: .gitignore  Cargo.toml  README.md  summarizer-bot.service.example  system_prompt.txt
cleanup-bot/: Cargo.toml
cleanup-bot/src/: command.rs  config.rs  main.rs
src/: config.rs  handler.rs  llm.rs  main.rs  tracing.rs
