[package]
name = "cleanup-bot"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
indoc = "2.0.7"
poise = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.5"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.11"
tracing = "0.1.44"
